ajuste form cadastro

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,8 @@
+<IfModule mod_headers.c>
+    # Ajuste temporário: permite inline para scripts e estilos
+    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:;"
+</IfModule>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
